Added links in the footer

--- a/index.html
+++ b/index.html
@@ -49,9 +49,20 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Kseniia Tereskina</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/Tereskina" target="_blank"
+            >Kseniia Tereskina</a
+          >
+          and is
+          <a
+            href="https://github.com/Tereskina/my-awesome-project"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a href="https://www.netlify.com/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
