Changed the link in the footer

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
             on GitHub</a
           >
           and
-          <a href="https://www.netlify.com/" target="_blank"
+          <a
+            href="https://silver-biscochitos-a568c1.netlify.app/"
+            target="_blank"
             >hosted on Netlify</a
           >
         </p>
